Fix modal handle on mobile

--- a/src/css/project.css
+++ b/src/css/project.css
@@ -106,7 +106,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 2;
+    z-index: 5;
     display: flex;
     justify-content: center;
     padding: 12px 0 12px 0;
